--- a/2.html
+++ b/2.html
@@ -5,6 +5,9 @@
 <meta charset="utf-8">
 </head>
 <body>
+<p>
+<iframe width="1136" height="639" src="https://www.youtube.com/embed/7T7r_oSp0SE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" title="WEB1 Appendix - Power of Code: Embedding a video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</p>
 <h1><a href="index.html">LOVE</h1>
 <ol>
     <li><a href="1.html">CUTENESS</a></li>
